apps/kuard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - kuard
            topologyKey: kubernetes.io/hostname
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-arm64:blue
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 256Mi
