apps/kuard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: kuard
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
